--- a/package.json
+++ b/package.json
@@ -24,5 +24,5 @@
   "bugs": {
     "url": "https://github.com/Cihaan/versioning-project/issues"
   },
-  "homepage": "https://github.com/Cihaan/versioning-project#readme",
+  "homepage": "https://github.com/Cihaan/versioning-project#readme"
 }
