--- a/package.json
+++ b/package.json
@@ -1,11 +1,6 @@
 {
   "name": "versioning-project",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -15,7 +10,8 @@
   "dependencies": {
     "@popperjs/core": "2.11.6",
     "bootstrap": "5.2.2",
-    "jquery": "3.6.1",
+    "jquery": "3.6.1"
+  },
   "description": "@Cihaan @Gyomzz @Pehlow @PChl0e",
   "main": "index.js",
   "scripts": {
@@ -25,8 +21,6 @@
     "type": "git",
     "url": "git+https://github.com/Cihaan/versioning-project.git"
   },
-  "author": "",
-  "license": "ISC",
   "bugs": {
     "url": "https://github.com/Cihaan/versioning-project/issues"
   },
