fix: try using different github action for auto deploy with netlify

--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -13,10 +13,9 @@ jobs:
       - run: npm install
     
       - name: Deploy to Netlify
-        uses: netlify/actions/cli@master
-        env:
+        uses: jsmrcaga/action-netlify-deploy@master
+        with:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-        with: 
-          args: deploy
-          secrets: '["NETLIFY_AUTH_TOKEN", "NETLIFY_SITE_ID"]'
+          NETLIFY_DEPLOY_MESSAGE: "Prod deploy v${{ github.ref }}"
+          NETLIFY_DEPLOY_TO_PROD: true
