--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -9,15 +9,16 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-        
-      - run: npm install
     
-      - name: Deploy to Netlify
-        uses: jsmrcaga/action-netlify-deploy@master
-        with:
+      - name: Install dependencies
+        run: npm install
+
+      - name: Install Netlify-cli
+        run: npm install netlify-cli -g
+      
+      - name: Login & Deploy to Netlify
+        env: 
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-          NETLIFY_DEPLOY_MESSAGE: "Prod deploy v${{ github.ref }}"
-          NETLIFY_DEPLOY_TO_PROD: true
-          build_command: false
-          
+        run: netlify container:login
+        run: netlify container:deploy
