--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -15,6 +15,9 @@ jobs:
     
       - name: Install dependencies
         run: npm install && pnpm install
+      
+      - name: Run test
+        run: npm test
 
       - name: Install Netlify-cli
         run: npm install netlify-cli -g
