fix: add missing labels in release.yml

--- a/.github/release.yml
+++ b/.github/release.yml
@@ -12,7 +12,8 @@ changelog:
       labels:
         - feat
     - title: Patch 🐜
-      - fix
+      labels:
+        - fix
     - title: Other Changes
       labels:
         - "*"
